hphp/hack/test/ifc/check/exception_multi_function.php.exp
File "exception_multi_function.php", line 22, characters 1-218:
Data with policy A appears in context B. (Typing[4379])
File "exception_multi_function.php", line 6, characters 14-19:
The data source with policy A
File "exception_multi_function.php", line 9, characters 14-19:
The data sink with policy B
File "exception_multi_function.php", line 32, characters 1-221:
Data with policy A appears in context B. (Typing[4379])
File "exception_multi_function.php", line 6, characters 14-19:
The data source with policy A
File "exception_multi_function.php", line 9, characters 14-19:
The data sink with policy B
